cluster/apps/pc-turnon/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pc-turnon
  namespace: kloud-apps
spec:
  type: ClusterIP
  selector:
    app: pc-turnon
  ports:
    - port: 80
      targetPort: 8000
