cluster/apps/pc-turnon/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pc-turnon
  namespace: kloud-apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: kloud-apps-pc-turnon-ratelimit@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - wol.kloud.rche.moe
      secretName: pc-turnon-tls
  rules:
    - host: wol.kloud.rche.moe
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pc-turnon
                port:
                  number: 80
